--- a/echo-bot.cabal
+++ b/echo-bot.cabal
@@ -47,7 +47,9 @@ executable echo-bot-exe
       base >=4.7 && <5
     , echo-bot
     , bytestring
+    , text
     , http-conduit
+    , aeson    
   default-language: Haskell2010 
 
 test-suite echo-bot-test
