--- a/echo-bot.cabal
+++ b/echo-bot.cabal
@@ -50,7 +50,8 @@ executable echo-bot-exe
     , text
     , http-conduit
     , aeson
-    , mtl    
+    , mtl
+    , containers    
   default-language: Haskell2010 
 
 test-suite echo-bot-test
