--- a/echo-bot.cabal
+++ b/echo-bot.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 6efa88bf87427f4317c7584f62587093fcd3fc7db0c0e1e356d142f530268699
+-- hash: 3f35e39291238dea2bf8256136d9eff6cef2ac3ebb0d8486733b5682c573f86a
 
 name:           echo-bot
 version:        0.1.0.0
@@ -28,12 +28,20 @@ source-repository head
 library
   exposed-modules:
       Lib
+      Vk
   other-modules:
       Paths_echo_bot
   hs-source-dirs:
       src
   build-depends:
-      base >=4.7 && <5
+      aeson
+    , base >=4.7 && <5
+    , bytestring
+    , containers
+    , http-conduit
+    , mtl
+    , text
+    , time
   default-language: Haskell2010
 
 executable echo-bot-exe
@@ -44,16 +52,16 @@ executable echo-bot-exe
       app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
-    , echo-bot
+      aeson
+    , base >=4.7 && <5
     , bytestring
+    , containers
+    , echo-bot
+    , http-conduit
+    , mtl
     , text
     , time
-    , http-conduit
-    , aeson
-    , mtl
-    , containers    
-  default-language: Haskell2010 
+  default-language: Haskell2010
 
 test-suite echo-bot-test
   type: exitcode-stdio-1.0
@@ -64,6 +72,13 @@ test-suite echo-bot-test
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      aeson
+    , base >=4.7 && <5
+    , bytestring
+    , containers
     , echo-bot
+    , http-conduit
+    , mtl
+    , text
+    , time
   default-language: Haskell2010
