--- a/package.yaml
+++ b/package.yaml
@@ -21,6 +21,13 @@ description:         Please see the README on GitHub at <https://github.com/gith
 
 dependencies:
 - base >= 4.7 && < 5
+- bytestring
+- text
+- time
+- http-conduit
+- aeson
+- mtl
+- containers
 
 library:
   source-dirs: src
