--- a/echo-bot.cabal
+++ b/echo-bot.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 3f35e39291238dea2bf8256136d9eff6cef2ac3ebb0d8486733b5682c573f86a
+-- hash: 1078b191dcfee95176dbbcf8e011459a396a6b6f9365e012f4156616ec5cb465
 
 name:           echo-bot
 version:        0.1.0.0
@@ -40,6 +40,7 @@ library
     , containers
     , http-conduit
     , mtl
+    , random
     , text
     , time
   default-language: Haskell2010
@@ -59,6 +60,7 @@ executable echo-bot-exe
     , echo-bot
     , http-conduit
     , mtl
+    , random
     , text
     , time
   default-language: Haskell2010
@@ -79,6 +81,7 @@ test-suite echo-bot-test
     , echo-bot
     , http-conduit
     , mtl
+    , random
     , text
     , time
   default-language: Haskell2010
