--- a/echo-bot.cabal
+++ b/echo-bot.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: db3dd2c6f4c53cc2981505ec46d541628f01596b9f6a07820b78730386ca79fb
+-- hash: 1a141d5af3fa4bfa9e9c7481fa09788f2d9b062735d31f9b2e98df648cf72605
 
 name:           echo-bot
 version:        0.1.0.0
@@ -33,6 +33,9 @@ library
       Paths_echo_bot
   hs-source-dirs:
       src
+  default-extensions:
+      OverloadedStrings
+      RecordWildCards
   build-depends:
       aeson
     , base >=4.7 && <5
@@ -51,6 +54,9 @@ executable echo-bot-exe
       Paths_echo_bot
   hs-source-dirs:
       app
+  default-extensions:
+      OverloadedStrings
+      RecordWildCards
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       aeson
@@ -72,6 +78,9 @@ test-suite echo-bot-test
       Paths_echo_bot
   hs-source-dirs:
       test
+  default-extensions:
+      OverloadedStrings
+      RecordWildCards
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       QuickCheck
